[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/credits/pixel_heart.png" type="Texture" id=2]
[ext_resource path="res://assets/credits/thorin_praise.png" type="Texture" id=3]
[ext_resource path="res://game_screens/ThankYouPage.gd" type="Script" id=4]
[ext_resource path="res://assets/credits/thank_you_so_much.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 1 )

[node name="ThankYouContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -168.0
margin_right = 225.0
margin_bottom = 168.0
alignment = 1
script = ExtResource( 4 )

[node name="End" type="RichTextLabel" parent="."]
margin_right = 450.0
margin_bottom = 336.0
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "Thank you so much for playing my game!"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 228.347, 152.903 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )

[node name="ThorinAvatar" type="Sprite" parent="."]
position = Vector2( 227.555, 297.031 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 3 )

[node name="FadeInTweener" type="Tween" parent="."]

[node name="ThankYouSoMuch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
